Left Section CSS style COMPLETE

--- a/style.css
+++ b/style.css
@@ -2,3 +2,63 @@
   font-family: "Norse-Bold";
   src: url("fonts/Norse-Bold.otf");
 }
+
+/* LEFT SECTION */
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  box-sizing: border-box;
+  display: flex;
+  font-family: "Roboto";
+}
+
+.side-image-panel {
+  position: relative;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  height: 1440px;
+  width: 40vw;
+  background: url(img/photo-1585202900225-6d3ac20a6962.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: 60%;
+}
+
+.logo {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 210px;
+  font-size: 8.5em;
+  top: 320px;
+}
+
+.logo > img {
+  height: 180px;
+}
+
+.title {
+  font-family: "Norse-Bold", sans-serif;
+}
+
+.credit {
+  position: absolute;
+  bottom: 20px;
+  font-size: 20px;
+}
+
+.credit > a {
+  color: white;
+}
