--- a/style.css
+++ b/style.css
@@ -62,3 +62,90 @@ body {
 .credit > a {
   color: white;
 }
+
+/* RIGHT SECTION */
+
+.input-panel {
+  background-color: whitesmoke;
+  width: 60vw;
+  font-size: 2em;
+}
+
+.hook {
+  margin: 245px 170px 90px 70px;
+  font-weight: bold;
+}
+
+.hook * {
+  margin-bottom: 30px;
+}
+
+.sign-up {
+  font-weight: bold;
+  color: rgb(31, 31, 51);
+  background-color: white;
+  padding: 1em 2.5em;
+  box-shadow: 0px 3px 10px rgb(150, 150, 150);
+  height: 350px;
+}
+
+.sign-up > p {
+  margin-bottom: 1em;
+}
+
+.inputs {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 15px;
+  gap: 3em 7em;
+}
+
+.inputs > div {
+  display: flex;
+  flex-direction: column;
+}
+
+div > input {
+  width: 330px;
+  height: 30px;
+}
+
+#create-account {
+  margin-left: 70px;
+}
+
+#create-account > button {
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 10px;
+  border: 0;
+  color: white;
+  background-color: #596d48;
+  height: 70px;
+  width: 300px;
+  margin-block: 40px;
+  box-shadow: 0px 3px 10px rgb(150, 150, 150);
+}
+
+p > a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #596d48;
+}
+
+input {
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 5px;
+  border: 1px solid #e5e7eb;
+}
+
+input:focus {
+  outline: 2px solid #3c7dff;
+  box-shadow: 0px 3px 10px rgb(148, 148, 148);
+}
+
+.error {
+  outline: 2px solid #ff3c3c;
+}
