--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 .hook {
-  margin: 245px 170px 90px 70px;
+  margin: 28vh 170px 90px 70px;
   font-weight: bold;
 }
 
@@ -84,7 +84,8 @@ body {
   font-weight: bold;
   color: rgb(31, 31, 51);
   background-color: white;
-  padding: 1em 2.5em;
+  padding-block: 1em;
+  padding-left: 2.5em;
   box-shadow: 0px 3px 10px rgb(150, 150, 150);
   height: 350px;
 }
@@ -107,7 +108,7 @@ body {
 
 div > input {
   width: 330px;
-  height: 30px;
+  height: 40px;
 }
 
 #create-account {
@@ -128,7 +129,11 @@ div > input {
   box-shadow: 0px 3px 10px rgb(150, 150, 150);
 }
 
-p > a {
+#create-account > p {
+  font-size: 23px;
+}
+
+#login {
   text-decoration: none;
   font-weight: bold;
   color: #596d48;
@@ -139,6 +144,7 @@ input {
   appearance: none;
   border-radius: 5px;
   border: 1px solid #e5e7eb;
+  position: relative;
 }
 
 input:focus {
@@ -148,4 +154,29 @@ input:focus {
 
 .error {
   outline: 2px solid #ff3c3c;
+}
+
+.error + span:after {
+  position: absolute;
+  content: "* Passwords do not match";
+  color: #ff3c3c;
+  width: 200px;
+  height: 100px;
+  transform: translateY(5%);
+}
+
+@media only screen and (max-width: 1500px) {
+  .hook {
+    margin-top: 20vh;
+  }
+  .sign-up {
+    height: 650px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .hook {
+    margin-top: 5vh;
+    font-size: 1em;
+  }
 }
